fix footer alignment

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -4,7 +4,6 @@
 .footer {
   background-color: #aeaeae;
     padding: ($spacer * 2) $spacer;
-    text-align: center;
     border-top: 1px solid #edefee;
 
     &__title {
